# deployment-audit

./: README.md  pyproject.toml
deployment_audit/: __main__.py
deployment_audit/audit/: audit_card.py  consequence.py  exposure.py  frontier.py  record.py  regime.py  witnesses.py
deployment_audit/benchmark/: generator.py  manifest.py  registry.py  splits.py
deployment_audit/cli/: benchmark_cli.py  execution_cli.py  export_cli.py  main.py  study_cli.py
deployment_audit/evaluation/: admissibility.py  contract.py  dominance.py  selection.py
deployment_audit/execution/: backend_llm.py  backend_mock.py  backend_protocol.py  cache_store.py  runner.py
deployment_audit/export/: figures.py  reports.py  schema.py  tables.py
deployment_audit/policy/: family.py  grid.py  menu.py
deployment_audit/schemas/: benchmark_manifest.py  execution_record.py  menu_audit_record.py  menu_state.py  panel_manifest_index.py
deployment_audit/study/: common.py  corroboration.py  family_ladder.py  frontier_panel.py  nested_menu.py  score_comparison.py
tests/: test_backend_contract.py  test_backend_contract_cli.py  test_benchmark_manifest.py  test_benchmark_registry.py  test_contract.py  test_corroboration_integration.py  test_export_invariants.py  test_family_ladder_integration.py  test_frontier_characterization.py  test_frontier_panel_integration.py  test_llm_backend.py  test_llm_backend_cli.py  test_nested_menu_integration.py  test_regime.py  test_score_comparison_integration.py
