[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deployment-audit"
version = "0.1.0"
description = "Deployment-audit engine for energy-aware AI systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Deployment Audit Contributors"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
]

[project.scripts]
deployment-audit = "deployment_audit.cli.main:main"

[tool.setuptools.packages.find]
include = ["deployment_audit*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.optional-dependencies]
llm = [
  "torch>=2.1",
  "transformers>=4.37",
]
